tests/invalidTest/other/bool_arith_uint.q
# EXPECT the boolean(uint1) cannot do binary calculation with int
def void errorDef(){
    uint1 a = 6>4
    uint8 b = a+9
}